--- a/css/taskStyle.css
+++ b/css/taskStyle.css
@@ -10,7 +10,7 @@ body {
 }
 .container {
   margin: 40px auto;
-  width: 500px;
+  width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,7 +22,7 @@ body {
   background-color: #eee;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   padding: 20px;
   border-radius: 5px;
@@ -32,6 +32,8 @@ h2 {
   color: #777;
 }
 .container .form input {
+  width: 100%;
+  height: 50px;
   font-size: 30px;
   outline: none;
   border: none;
@@ -106,4 +108,42 @@ p.no-task {
 }
 p.task-text.finish {
   text-decoration: line-through;
+}
+@media (max-width: 767px) {
+  .container {
+    gap: 15px;
+  }
+  .container .form,
+  .tasks,
+  .finish-tasks {
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px 10px;
+  }
+  .container .form input {
+    max-width: 100%;
+    margin: 0;
+    height: 50px;
+  }
+  .task {
+    flex-direction: column;
+    gap: 20px;
+    padding: 15px;
+    margin: 15px 0;
+  }
+  .task span.num {
+    left: 50%;
+    transform: translate(-50%);
+    top: -30px;
+  }
+  .task p {
+    max-width: 100%;
+  }
+  .task .buttons {
+    width: 100%;
+    justify-content: space-evenly;
+  }
+  .task .buttons button {
+    width: 30%;
+  }
 }
